added google analytics

--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,14 @@
         "knowsAbout": ["Java", "Golang", "TypeScript", "React", "AWS", "Microservices", "Team Leadership"]
     }
     </script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFRPY9FHHT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-NFRPY9FHHT');
+    </script>
   </head>
   <body>
     <div id="root"></div>
